# watch_party

./: README.md
extension/: .eslintrc.json  .web-extension-id  background.js  manifest.json  package-lock.json  package.json  v3_manifest.json
extension/background/: background.js
extension/content/: video.js
extension/content_scripts/: watch_party.js
extension/popup/: popup.css  popup.html  popup.js  popup_helper.js
extension/web-ext-artifacts/: 9d45ec21ceb74c00ba6b-1.0.xpi
extension_v2/: manifest.json
extension_v2/background/: background.js
extension_v2/content/: video.js
extension_v2/popup/: popup.css  popup.html  popup.js
server/release/: server.d
server/release/.fingerprint/addr2line-28691b98597328ab/: lib-addr2line
server/release/.fingerprint/adler-94babb9f2fc4c189/: lib-adler  lib-adler.json
server/release/.fingerprint/backtrace-7d5e19c7230bd2e4/: run-build-script-build-script-build.json
server/release/.fingerprint/base64-1ab152b0c92a0011/: lib-base64.json
server/release/.fingerprint/byteorder-6a980749a4c74e0c/: lib-byteorder.json
server/release/.fingerprint/cfg-if-e61d661c28fe293e/: lib-cfg-if
server/release/.fingerprint/color-eyre-fb81cced9a152215/: lib-color-eyre  lib-color-eyre.json
server/release/.fingerprint/cpufeatures-c8e957d1fc0f9a70/: lib-cpufeatures  lib-cpufeatures.json
server/server/: Cargo.toml
server/server/src/: client.rs  handle_client.rs  host.rs  main.rs
ws_server/server/: .env  Cargo.toml
ws_server/server/src/: client.rs  example.rs  handle_client.rs  host.rs  main.rs  requests.rs
(+91 files in other folders)
