[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
color-eyre = { version = "0.5", default-features = false }
dotenv = "0.15.0"
tokio-tungstenite = "0.17.2"
futures-channel = "0.3.21"
futures-util = "0.3.21"
rand = "0.8.5"
